# FormalScience

./: .gitignore  .markdownlint.json  100_ABSOLUTE_COMPLETE.md  100_COMPLETE_FINAL.md  100_PERFECT_COMPLETE.md  100_TRUE_COMPLETE.md  10_Future_Directions_完成报告.md  BROKEN_LINKS_FIX_REPORT.md  BROKEN_LINKS_FIX_REPORT_CURRENT.md  CHANGELOG.md  COMPREHENSIVE_AUDIT_REPORT_2026.md  CONTRIBUTING.md  CURSOR_SETUP_GUIDE.md  D1_D3_FINAL_SCAN_REPORT.md  DIRECTORY_OPTIMIZATION_REPORT_B2-B4.md  DOCUMENT_CONSISTENCY_FINAL_REPORT.md  DUPLICATE_FILES_CLEANUP_REPORT.md  EDGE_CASE_HANDLING_COMPLETE.md  EDGE_CASE_HANDLING_REPORT.md  FINAL_ACCEPTANCE_REPORT_100_PERCENT.md  FINAL_BROKEN_LINKS_FIX_REPORT.md  FINAL_BROKEN_LINKS_REPORT.md  FINAL_COMPLETION_REPORT_D4_D5.md  FINAL_DEEP_SCAN_REPORT.md  FINAL_OMISSION_CHECK_COMPLETE.md  GITHUB_GUIDE.md  GITHUB_OPTIMIZATION_REPORT.md  GITHUB_RELEASE_PREP_REPORT.md  LARGE_FILE_OPTIMIZATION_ACTIONS.md  LARGE_FILE_OPTIMIZATION_REPORT.md  LICENSE.md  OMISSION_CHECK_REPORT.md  OMISSION_FIX_REPORT.md  PROJECT_STATUS.md  README.md  README_CREATION_REPORT_B1.md  README_项目完成状态_2025-11-14.md  RELEASE_NOTES.md  RELEASE_READY_CONFIRMATION.md  REPORTS_CLEANUP_SUMMARY.md  (+57 more)
.github/: README.md  SECURITY.md  pull_request_template.md
.reports/: R6A_关键断链修复完成报告.md  RELEASE_CHECKLIST.md  after_manual_cleanup_full.txt  after_manual_cleanup_v2.txt  after_round2_full.txt  after_round2_v2.txt  after_template_cleanup_full.txt  after_template_cleanup_v2.txt  after_view_cleanup_full.txt  after_view_cleanup_v2.txt  broken_links_final_report.txt  broken_links_report.txt  duplicate_nested_dirs.txt  final_full_after_commit.txt  final_v2_after_commit.txt  latest_broken_links_full.json  latest_broken_links_scan.json  latest_full_for_plan.txt  latest_v2_for_plan.txt  latest_v2_scan.txt  link_check_report_r6a.md  post_absolute_cleanup_full.txt  post_absolute_cleanup_v2.txt  post_cleanup_broken_links.json  post_final_cleanup_full.txt  post_final_cleanup_v2.txt  post_subagent_cleanup.json  r6a_comprehensive_fix_report.md  r6a_link_fix_report.md  schedule_formal_view_issues.md
01_Foundational_Theory/: 01.1_Type_Theory_Foundation.md  01.2_Linear_Type_Theory.md
Composed/: Petri网主题完成报告_2025-12-02.md  Petri网多视角对应关系总览.md  Petri网理论全面扩展完成报告_2025-12-02.md  Petri网理论扩展最终总结报告_2025-12-02.md  README.md  任务完成报告_2025-12-02.md  任务推进最终报告_2025-12-02.md  全面批判性分析与改进计划_2025-12.md  可视化体系完成报告.md  可视化体系最终完成状态.md  可视化推进总结报告.md  完成总结.md  形式化分析与认知图谱.md  快速参考指南.md  所有任务100%完成确认_2025-12-02.md  改进任务清单与实施方案_2025-12.md  最终完成报告_2025-12-02.md  知识图谱可视化总览.md  类型-调度同构理论.md  统一术语表.md  跨视角因果关系与关联分析图.md  跨视角多维知识矩阵.md  跨视角引用规范.md  跨视角链接添加完成报告.md
Concept/: 00_Foundational_Assumptions.md  AI_MODEL_COMPLETION_REPORT_2025-10-27.md  ANALYSIS_FRAMEWORK_PROGRESS_2025-10-27.md  ANALYSIS_PLAN_PROGRESS.md  ARCHIVING_REPORT_2025-10-27.md  ARCHIVING_SUMMARY_2025-10-29.md  ARGUMENTATION_FRAMEWORK_ANALYSIS.md  ARGUMENTATION_MAP_VISUALIZATION.md  AUTHORITATIVE_REFERENCES_BATCH2_2025-10-27.md  AUTHORITATIVE_REFERENCES_BATCH3_2025-10-27.md  AUTHORITATIVE_REFERENCES_BATCH5_2025-10-27.md  AUTHORITATIVE_REFERENCES_BATCH6_FINAL_2025-10-27.md  AUTHORITATIVE_REFERENCES_PROGRESS_2025-10-27.md  BATCH2_COMPLETION_REPORT_2025-10-29.md  BATCH_2-10_DETAILED_PLAN.md  BATCH_FIX_LOG_2025-10-27.md  BATCH_FIX_PROGRESS_2025-10-27.md  BATCH_METADATA_UPDATE_2025-10-27.md  BATCH_PROGRESS_2025-10-28_23-30.md  BATCH_TOC_PROGRESS.md  BATCH_TOC_STATUS.md  BIDIRECTIONAL_LINKS_COMPLETION_REPORT.md  BROKEN_LINKS_AI_MODEL_CURRENT_2025-10-29.md  BROKEN_LINKS_FIX_PROGRESS_2025-10-29.md  BROKEN_LINKS_FORMAL_LANGUAGE_2025-10-29.md  BROKEN_LINKS_FORMAL_LANGUAGE_CURRENT_2025-10-29.md  BROKEN_LINKS_MASTER_REPORT_2025-10-29.md  BROKEN_LINKS_PROJECT_COMPLETE_2025-10-29.md  BROKEN_LINKS_SOFTWARE_2025-10-29.md  BROKEN_LINKS_SOFTWARE_FINAL_2025-10-29.md  BROKEN_LINKS_SOFTWARE_PERFECT_2025-10-29.md  BROKEN_LINKS_SOFTWARE_VERIFIED_2025-10-29.md  CASE_STUDIES_INDEX.md  CASE_STUDIES_INDEX_CN.md  CASE_STUDY_BLOCKCHAIN_CONSENSUS.md  CASE_STUDY_COMPILER_SYSTEMS.md  CASE_STUDY_DATABASE_SYSTEMS.md  (+216 more)
docs/Refactor/examples/rust/async_runtime/: Cargo.toml
docs/Refactor/examples/rust/async_runtime/benches/: async_benchmark.rs
docs/Refactor/examples/rust/async_runtime/src/: executor.rs  future.rs  lib.rs  reactor.rs  scheduler.rs  task.rs
docs/Refactor/examples/rust/rust_advanced/: Cargo.toml
docs/Refactor/examples/rust/rust_advanced/benches/: trait_benchmark.rs
docs/Refactor/examples/rust/rust_advanced/src/: lib.rs  lifetimes.rs  traits.rs  type_level.rs  zero_cost.rs
docs/Refactor/examples/rust/scheduling/: Cargo.toml
docs/Refactor/examples/rust/scheduling/benches/: scheduler_benchmark.rs
docs/Refactor/examples/rust/scheduling/src/: edf.rs  lib.rs  mlfq.rs  priority_scheduler.rs  round_robin.rs  thread_pool.rs  work_stealing.rs
docs/Refactor/examples/rust/type_system/: Cargo.toml
docs/Refactor/examples/rust/type_system/benches/: type_check_benchmark.rs
docs/Refactor/examples/rust/type_system/src/: adt.rs  lambda_calculus.rs  lib.rs  linear_types.rs  type_checker.rs
docs/Refactor/projects/scheduler_simulator/: Cargo.toml  README.md
docs/Refactor/projects/scheduler_simulator/examples/: demo.rs
docs/Refactor/projects/scheduler_simulator/src/: lib.rs  main.rs  metrics.rs  tasks.rs
docs/Refactor/projects/scheduler_simulator/src/scheduler/: fcfs.rs  mlfq.rs  mod.rs  priority.rs  round_robin.rs  sjf.rs
docs/Refactor/projects/type_checker/: Cargo.toml  README.md
docs/Refactor/projects/type_checker/examples/: basic.rs  function.rs  generic.rs
docs/Refactor/projects/type_checker/src/: ast.rs  lib.rs  main.rs  parser.rs  type_checker.rs
examples/rust/: Cargo.toml  README.md
examples/rust/async/: README.md  futures_pin.rs  tokio_examples.rs  waker_executor.rs
examples/rust/concurrency/: README.md  atomic_memory.rs  channels.rs  lock_free.rs  locks.rs
examples/rust/scheduling/: README.md  async_io.rs  buddy_allocator.rs  priority_scheduler.rs  round_robin.rs  thread_pool.rs
examples/rust/system/: README.md  bpf_program.rs  memory_management.rs  syscalls.rs
(+8727 files in other folders)
