[package]
name = "rust_advanced"
version = "1.0.0"
edition = "2021"
authors = ["FormalScience Project"]
description = "Advanced Rust examples for FormalScience project"
license = "MIT"
repository = "https://github.com/username/FormalScience"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trait_benchmark"
harness = false
