[package]
name = "scheduling"
version = "1.0.0"
edition = "2021"
authors = ["FormalScience Project"]
description = "Scheduling algorithms examples for FormalScience project"
license = "MIT"
repository = "https://github.com/username/FormalScience"

[dependencies]
crossbeam = "0.8"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "scheduler_benchmark"
harness = false
