[package]
name = "type_system"
version = "1.0.0"
edition = "2021"
authors = ["FormalScience Project"]
description = "Type system examples for FormalScience project"
license = "MIT"
repository = "https://github.com/username/FormalScience"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "type_check_benchmark"
harness = false
